Added itch.io and GGJ to the icons, because I'm a pro at it now, and why not?

--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -1,6 +1,8 @@
 {% if site.footer-links.dribbble %}<a href="https://dribbble.com/{{ site.footer-links.dribbble }}"><i class="svg-icon dribbble"></i></a>{% endif %}
 {% if site.footer-links.email %}<a href="mailto:{{ site.footer-links.email }}"><i class="svg-icon email"></i></a>{% endif %}
+{% if site.footer-links.itchio %}<a href="https://{{ site.footer-links.itchio }}.itch.io/"><i class="svg-icon itchio"></i></a>{% endif %}
 {% if site.footer-links.github %}<a href="https://github.com/{{ site.footer-links.github }}"><i class="svg-icon github"></i></a>{% endif %}
+{% if site.footer-links.ggj %}<a href="https://globalgamejam.org/users/{{ site.footer-links.ggj }}"><i class="svg-icon ggj"></i></a>{% endif %}
 {% if site.footer-links.linkedin %}<a href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}"><i class="svg-icon linkedin"></i></a>{% endif %}
 {% if site.footer-links.instagram %}<a href="https://instagram.com/{{ site.footer-links.instagram }}"><i class="svg-icon instagram"></i></a>{% endif %}
 {% if site.footer-links.facebook %}<a href="https://www.facebook.com/{{ site.footer-links.facebook }}"><i class="svg-icon facebook"></i></a>{% endif %}
