Added thumbnail images to project. Attempted to link and style them on the projects page.

--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,16 @@ footer {
   text-align: center;
 }
 
+//
+// projects
+//
+
+.project-thumbnail {
+  float: left;
+  width: 100px;
+  height: 100px;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
