CSS needs img ref?

--- a/style.scss
+++ b/style.scss
@@ -288,9 +288,12 @@ footer {
 //
 
 .project-thumbnail {
-  float: left;
-  width: 100px;
-  height: 100px;
+
+  .img {
+    float: left;
+    width: 100px;
+    height: 100px;
+  }
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
