--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,10 +5,12 @@ layout: default
 <article class="project">
   <div class="project-title-div">
     <img class="project-title-thumbnail" src="/images/project-thumbnails/{{ page.thumbnail }}" />
-    <h1 class="project-title-text">{{ page.title }}</h1>
-    <h3 class="project-subtitle">{{ % if page.release-date % }}Released: {{ page.release-date }}{{ % endif % }}</h3>
-    <h3 class="project-subtitle">{{ % if page.platform }}Platform: {{ page.platform }}{{ % endif % }}</h3>
-    <h3 class="project-subtitle">{{ % if page.tech }}Developed with: {{ page.tech }}{{ % endif % }}</h3>
+    <div class="project-description-div">
+      <h1 class="project-title-text">{{ page.title }}</h1>
+      <h3 class="project-subtitle">{{ % if page.release-date % }}Released: {{ page.release-date }}{{ % endif % }}</h3>
+      <h3 class="project-subtitle">{{ % if page.platform }}Platform: {{ page.platform }}{{ % endif % }}</h3>
+      <h3 class="project-subtitle">{{ % if page.tech }}Developed with: {{ page.tech }}{{ % endif % }}</h3>
+    </div>
   </div>
 
   <div class="project-team-credit">
