Reworking conditionals in project template.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,9 +7,9 @@ layout: default
     <img class="project-title-thumbnail" src="/images/project-thumbnails/{{ page.thumbnail }}" />
     <div class="project-description-div">
       <h1 class="project-title-text">{{ page.title }}</h1>
-      <h3 class="project-subtitle">{{ % if page.release-date % }}Released: {{ page.release-date }}{{ % endif % }}</h3>
-      <h3 class="project-subtitle">{{ % if page.platform }}Platform: {{ page.platform }}{{ % endif % }}</h3>
-      <h3 class="project-subtitle">{{ % if page.tech }}Developed with: {{ page.tech }}{{ % endif % }}</h3>
+      { % if page.release-date % }<h3 class="project-subtitle">Released: {{ page.release-date }}</h3>{ % endif % }
+      { % if page.platform % }<h3 class="project-subtitle">Platform: {{ page.platform }}</h3>{ % endif % }
+      { % if page.tech % }<h3 class="project-subtitle">Developed with: {{ page.tech }}</h3>{ % endif % }
     </div>
   </div>
 
