--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,52 @@ footer {
   text-align: center;
 }
 
+.post-nav-button-prev {
+  float: left;
+  font-size:15px;
+  font-family:Arial;
+  width:140px;
+  height:50px;
+  border-width:1px;
+  color:#fff;
+  border-color:#4b8f29;
+  font-weight:bold;
+  border-top-left-radius:4px;
+  border-top-right-radius:4px;
+  border-bottom-left-radius:4px;
+  border-bottom-right-radius:4px;
+  box-shadow: 0px 10px 16px -13px #3e7327;
+  text-shadow: 0px 1px 0px #5b8a3c;
+  background:linear-gradient(#77b55a, #72b352);
+}
+
+.post-nav-button-prev:hover {
+  background: linear-gradient(#72b352, #77b55a);
+}
+
+.post-nav-button-next {
+  float: right;
+  font-size:15px;
+  font-family:Arial;
+  width:140px;
+  height:50px;
+  border-width:1px;
+  color:#fff;
+  border-color:#4b8f29;
+  font-weight:bold;
+  border-top-left-radius:4px;
+  border-top-right-radius:4px;
+  border-bottom-left-radius:4px;
+  border-bottom-right-radius:4px;
+  box-shadow: 0px 10px 16px -13px #3e7327;
+  text-shadow: 0px 1px 0px #5b8a3c;
+  background:linear-gradient(#77b55a, #72b352);
+}
+
+.post-nav-button-next:hover {
+  background: linear-gradient(#72b352, #77b55a);
+}
+
 //
 // projects
 //
